RT-18423: Update indent and remove gallery

--- a/content/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/content/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -1,217 +1,217 @@
 <style type="text/css">
 	body {
-		background: linear-gradient(#f4f4f4, #dadada);
-	}
-	
-	abbr[title] {
-		border-bottom: none;
-	}
-	
-	p {
-		font-family: "Helvetica Neue","Helvetica",sans-serif;
-		line-height:1.5;
-		font-size:15px;
-	}
-	
-	th{
-		font-weight:lighter;
-		font-size: 1em;
-	}
-	
-	#retro-header-wrapper {
-		width:90%;
-		margin: 0px auto 0px auto;
-		padding:0px 5%;
-	}
-	
-	#retro-header-div {
-		margin:0px;
-		padding:30px 0px;
-		font-size: 1.5em;
-	}
-	
-	#retro-body-wrapper {
-		width:90%;
-		margin: 0px auto 0px auto;
-		padding:50px 5%;
-	}
-	
-	.headers{
-		padding-left: 30%;
-		position: relative;
-	}
-	
-	.codetacc-head{
-		display: block;
-		margin-bottom: -18px;
-	}
-	
-	.code-main-logo{
-		/* margin-left: 30%;
-		width: 800px; */
-	}
-	
-	.code-logo-ds{
-		margin-left: 12%;
-		width: 800px;
-	}
-	
-	.designsafe{
-		font-size: 4em;
-		display: block;
-		margin-top: -30px;
-	}
-	
-	.code-at-tacc-logo{
-		width: 400px;
-		margin-left:30%;
-	}
-	
-	.camp-dates{
-		color:#039;
-		/* font-size: 2.75em; */
-		font-size: 1.75em;
-		margin-top: 0px;
-		/*padding-left: 30%;*/
-		text-align: center;
-	}
-	
-	.panel{
-		border: 0 none;
-	}
-	
-	.panel-default > .panel-heading{
-		background-image: none;
-		background-color: transparent;
-		border-bottom: 2px solid transparent;
-		color: #039;
-	}
-	
-	.panel-title a{
-		color: #039;
-	}
-	
-	.center-col{
-		border-left: 1px solid #3e3e3e;
-		border-right: 1px solid #3e3e3e;
-	}
-	
-	.application{
-		border-bottom: 1px solid;
-		font-weight: bolder;
-	}
-	
-	.camp-subhead{
-		font-family:"HelveticaNeueLTStd-LtCn","Helvetica Neue","Helvetica",sans-serif;
-		color: rgb(0, 0, 0);
-	}
-	
-	.img-banners{
-		margin:0;
-		padding:0;
-		width:100%;
-		border:none;
-		text-align: center;
-	
-	}
-	
-	.cybersecurity-logo{
-		text-transform: uppercase;
-		font-family:"HelveticaNeueLTStd-BdCn","Helvetica Neue","Helvetica",sans-serif;
-		text-align: center;
-		/* margin: 25px 0; */
-		font-size: 5em;
-	
-	
-	}
-	
-	@media (max-width: 1200px) {
-		.rwd-codetacc{}
-	
-		.rwd-designsafe{
-			font-size: 3em;
+			background: linear-gradient(#f4f4f4, #dadada);
 		}
-	
-		.rwd-dates{}
-	
-	}
-	@media (max-width: 800px){
-		.rwd-codetacc{}
-	
-		.rwd-designsafe{
-			font-size: 2em;
-			padding: 10px;
+		
+		abbr[title] {
+			border-bottom: none;
 		}
-	
-		.cybersecurity-logo{
-			font-size: 2.5em;
+		
+		p {
+			font-family: "Helvetica Neue","Helvetica",sans-serif;
+			line-height:1.5;
+			font-size:15px;
 		}
-	
-		.rwd-dates{}
-	
-		.center-col{
-				border-left: 0 none;
-				border-right: 0 none;
-			}
-	
+		
+		th{
+			font-weight:lighter;
+			font-size: 1em;
+		}
+		
+		#retro-header-wrapper {
+			width:90%;
+			margin: 0px auto 0px auto;
+			padding:0px 5%;
+		}
+		
+		#retro-header-div {
+			margin:0px;
+			padding:30px 0px;
+			font-size: 1.5em;
+		}
+		
+		#retro-body-wrapper {
+			width:90%;
+			margin: 0px auto 0px auto;
+			padding:50px 5%;
+		}
+		
+		.headers{
+			padding-left: 30%;
+			position: relative;
+		}
+		
+		.codetacc-head{
+			display: block;
+			margin-bottom: -18px;
+		}
+		
+		.code-main-logo{
+			/* margin-left: 30%;
+			width: 800px; */
+		}
+		
 		.code-logo-ds{
-				margin-left: 0;
-	
-	
+			margin-left: 12%;
+			width: 800px;
+		}
+		
+		.designsafe{
+			font-size: 4em;
+			display: block;
+			margin-top: -30px;
+		}
+		
+		.code-at-tacc-logo{
+			width: 400px;
+			margin-left:30%;
+		}
+		
+		.camp-dates{
+			color:#039;
+			/* font-size: 2.75em; */
+			font-size: 1.75em;
+			margin-top: 0px;
+			/*padding-left: 30%;*/
+			text-align: center;
+		}
+		
+		.panel{
+			border: 0 none;
+		}
+		
+		.panel-default > .panel-heading{
+			background-image: none;
+			background-color: transparent;
+			border-bottom: 2px solid transparent;
+			color: #039;
+		}
+		
+		.panel-title a{
+			color: #039;
+		}
+		
+		.center-col{
+			border-left: 1px solid #3e3e3e;
+			border-right: 1px solid #3e3e3e;
+		}
+		
+		.application{
+			border-bottom: 1px solid;
+			font-weight: bolder;
+		}
+		
+		.camp-subhead{
+			font-family:"HelveticaNeueLTStd-LtCn","Helvetica Neue","Helvetica",sans-serif;
+			color: rgb(0, 0, 0);
+		}
+		
+		.img-banners{
+			margin:0;
+			padding:0;
+			width:100%;
+			border:none;
+			text-align: center;
+		
+		}
+		
+		.cybersecurity-logo{
+			text-transform: uppercase;
+			font-family:"HelveticaNeueLTStd-BdCn","Helvetica Neue","Helvetica",sans-serif;
+			text-align: center;
+			/* margin: 25px 0; */
+			font-size: 5em;
+		
+		
+		}
+		
+		@media (max-width: 1200px) {
+			.rwd-codetacc{}
+		
+			.rwd-designsafe{
+				font-size: 3em;
+			}
+		
+			.rwd-dates{}
+		
+		}
+		@media (max-width: 800px){
+			.rwd-codetacc{}
+		
+			.rwd-designsafe{
+				font-size: 2em;
+				padding: 10px;
+			}
+		
+			.cybersecurity-logo{
+				font-size: 2.5em;
+			}
+		
+			.rwd-dates{}
+		
+			.center-col{
+					border-left: 0 none;
+					border-right: 0 none;
+				}
+		
+			.code-logo-ds{
+					margin-left: 0;
+		
+		
+				}
+				.code-main-logo{
+						width: 400px;
+						margin-left: 8%;
+				}
+		
+				.img-banners{
+					margin-bottom: 20px;
+				}
+		}
+		
+		@media (max-width: 480px) {
+			.rwd-codetacc{
+				font-size: 20px;
+			}
+		
+			.rwd-designsafe{
+				font-size: 1em;
+				padding-top: 10px;
+			}
+		
+			.rwd-dates{
+				font-size:1.5em;
+			}
+		
+			.code-logo-ds{
+				margin-left:0;
+		
 			}
 			.code-main-logo{
 					width: 400px;
-					margin-left: 8%;
+					margin-left: 10%;
+					max-width: 90%;
 			}
-	
+			.cybersecurity-logo{
+				font-size: 2em;
+				margin-left: -10%;
+				width: 300px;
+			}
+			.center-col{
+				border-left: 0 none;
+				border-right: 0 none;
+			}
+		
+			.directions{
+				border-top: 1px solid lightgrey;
+				padding-top: 15px;
+			}
+		
 			.img-banners{
 				margin-bottom: 20px;
 			}
-	}
-	
-	@media (max-width: 480px) {
-		.rwd-codetacc{
-			font-size: 20px;
-		}
-	
-		.rwd-designsafe{
-			font-size: 1em;
-			padding-top: 10px;
-		}
-	
-		.rwd-dates{
-			font-size:1.5em;
-		}
-	
-		.code-logo-ds{
-			margin-left:0;
-	
-		}
-		.code-main-logo{
-				width: 400px;
-				margin-left: 10%;
-				max-width: 90%;
-		}
-		.cybersecurity-logo{
-			font-size: 2em;
-			margin-left: -10%;
-			width: 300px;
-		}
-		.center-col{
-			border-left: 0 none;
-			border-right: 0 none;
-		}
-	
-		.directions{
-			border-top: 1px solid lightgrey;
-			padding-top: 15px;
-		}
-	
-		.img-banners{
-			margin-bottom: 20px;
-		}
-	
-	}</style>
+		
+		}</style>
 	<div class="container" id="retro-header-wrapper">
 		<div class="row" id="retro-header-div">
 			<div class="col-sm-12">
@@ -229,9 +229,9 @@
 				</header>
 				<!-- <h1 style="text-align: center;">CODE @ TACCATX</h1> --><!-- <a style="text-align: center;"><img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1151567/CODE @ TACC-logo-small.png" style="margin:0px; padding:0px; width: 300px;" /></a> --></div>
 			<!-- <div class="col-sm-12">
-				<p>
-					<img alt="DesignSafe-CI Camp logo" class="img-responsive code-logo-ds" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DSCamp-logo-centered.png" /></p>
-			</div> -->
+					<p>
+						<img alt="DesignSafe-CI Camp logo" class="img-responsive code-logo-ds" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DSCamp-logo-centered.png" /></p>
+				</div> -->
 			<div class="col-md-12">
 				<h2 class="camp-dates rwd-dates" style="text-align: center; margin: 0px; padding: 0px;">
 					<abbr title="To Be Decided">TBD</abbr>, 2021</h2>
@@ -244,9 +244,9 @@
 					<img class="img-responsive" src="/documents/1084364/1836493/cybersecurity-1.jpg/" /></p>
 			</div>
 			<!-- <div class="col-md-6">
-				<p class="centered" style="font-size:small; color:#999; margin-top:0px; margin-bottom:30px; display: block;">
-					<img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DScamp02.png" /></p>
-			</div>  --></div>
+					<p class="centered" style="font-size:small; color:#999; margin-top:0px; margin-bottom:30px; display: block;">
+						<img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DScamp02.png" /></p>
+				</div>  --></div>
 		<div class="row">
 			<div class="col-md-6">
 				<p>
@@ -278,7 +278,7 @@
 					<p style="text-align: center; margin-top: -20px;">
 						<small>Out of concern for the health and safety of our community, The University of Texas at Austin has cancelled all in-person Summer 2020 programs, including Code@TACC.</small></p>
 					<small><!--2020-04-21: Camps closed --><!--<p style="margin-top: 0px; font-style: italic; font-size: 12px; text-align: center;">
-						Participants will be notified by May 1, if they were selected to participate in the program. Application closes on April 20, 2020.</p>--></small></div>
+							Participants will be notified by May 1, if they were selected to participate in the program. Application closes on April 20, 2020.</p>--></small></div>
 				<div class="col-md-4">
 					<h2 style="text-align:center;">
 						<small><span style="border-bottom: 1px solid; font-weight: bolder;">Cost</span><br />
@@ -362,15 +362,15 @@
 							<small>FORMS</small></h4>
 						<p style="text-align: center;">
 							<small>Required forms will be available soon. <!--<p>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=8441907e-13cf-42a7-a6bc-f37c1b99ec83&amp;env=na1" target="_blank">English</a></p>
-						<p>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=ae067a87-eb26-42d4-be16-344a705d148f&amp;env=na1" target="_blank">Español</a></p>
-						<ul style="list-style: none;">
-							<li style="margin-bottom: 10px;">
-								<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=8441907e-13cf-42a7-a6bc-f37c1b99ec83" target="_blank" title="2018 English CODE @ TACC Cybersecurity - YPP Camp Release">2018 English CODE @ TACC Cybersecurity - YPP Camp Release </a></li>
-							<li>
-								<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=ae067a87-eb26-42d4-be16-344a705d148f" target="_blank" title="2018 Español CODE @ TACC Cybersecurity - YPP formularios de liberación">2018 Español CODE @ TACC Cybersecurity - YPP formularios de liberación</a></li>
-						</ul>--></small></p>
+								<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=8441907e-13cf-42a7-a6bc-f37c1b99ec83&amp;env=na1" target="_blank">English</a></p>
+							<p>
+								<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=ae067a87-eb26-42d4-be16-344a705d148f&amp;env=na1" target="_blank">Español</a></p>
+							<ul style="list-style: none;">
+								<li style="margin-bottom: 10px;">
+									<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=8441907e-13cf-42a7-a6bc-f37c1b99ec83" target="_blank" title="2018 English CODE @ TACC Cybersecurity - YPP Camp Release">2018 English CODE @ TACC Cybersecurity - YPP Camp Release </a></li>
+								<li>
+									<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=ae067a87-eb26-42d4-be16-344a705d148f" target="_blank" title="2018 Español CODE @ TACC Cybersecurity - YPP formularios de liberación">2018 Español CODE @ TACC Cybersecurity - YPP formularios de liberación</a></li>
+							</ul>--></small></p>
 					</div>
 				</div>
 				<small><!-- <img alt="Supercompute Deep Earth: 2015 Gordon Bell Prize Winner" class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1484428/deep-earth.png" style="margin:0px; padding:0px; width:100%;" alt="Camp FAQs"/> --></small>
@@ -595,8 +595,8 @@
 		<div class="row">
 			<div class="dress-code col-sm-12">
 				<small><!--
-					<p style="font-size: 5em; text-align: center;"><i class="fa fa-ban" aria-hidden="true"></i></p>
-				--></small>
+						<p style="font-size: 5em; text-align: center;"><i class="fa fa-ban" aria-hidden="true"></i></p>
+					--></small>
 				<h2 class="camp-subhead" style="text-align:center; margin:75px 0px 50px 0px; padding:0px;">
 					<small>TACC Dress Policy</small></h2>
 				<p>
@@ -625,92 +625,90 @@
 				</ul>
 			</div>
 		</div>
-		<small>
-		<style id="o-gallery-styles" type="text/css">
-	/*
-			Gallery (Object)
-	
-			A gallery of apps to launch, images to view, etc.
-	
-			Markup:
-			<ul class="o-gallery">
-				<li>…</li>
-				<li>…</li>
-			</ul>
-			*/
-			/* WARN: Duplicated in:
-				- `stem-programs/code-at-tacc/cybersecurity`
-				- `stem-programs/code-at-tacc/cybersecurity-comptia`
-				- `epic/funders-and-project-partners`
-			*/
-			.o-gallery {
-				--grid-gap: 30px;
-				--min-item-width: 300px;
-	
-				display: grid;
-				grid-gap: var(--grid-gap);
-				grid-template-columns: repeat(auto-fit, minmax(var(--min-item-width), 1fr));
-				justify-items: center;
-				align-items: center;
-			}	</style>
-		<style id="s-gallery-styles" type="text/css">
-	/*
-			Gallery (Scope)
-	
-			Styles often added for instances of `o-gallery`, but independent of `o-gallery` layout.
-			*/
-			/* WARN: Duplicated in:
-				- `stem-programs/code-at-tacc/cybersecurity`
-				- `stem-programs/code-at-tacc/cybersecurity-comptia`
-				- `epic/funders-and-project-partners`
-			*/
-			.s-gallery li {
-				list-style-type: none;
-			}	</style>
-		<style id="cybersecurity-unique-gallery-styles" type="text/css">
-	.o-gallery {
-				--grid-gap: 25px;
-				/* FAQ: This variable is borrowed from `.s-gallery` */
-				--min-item-width: var(--smallest-image-width);
-	
-				margin: 25px auto 0;
-			}
-			.s-gallery {
-				--smallest-image-width: 310px;
-				--smallest-image-height: 106px;
-			}
-			.s-gallery li > img {
-				max-width: var(--smallest-image-width);
-				max-height: var(--smallest-image-height);
-			}	</style>
-		</small>
 		<div class="row">
 			<div class="col-sm-12">
 				<h2 style="text-align:center; margin:75px 0px 25px 0px; padding:0px;">
 					<small>Funding</small></h2>
 				<p style="text-align:center">
 					<small>The camp was funded with the generosity from Cisco University Research Program Fund and Silicon Valley Community Foundation.</small></p>
-				<ul class="o-gallery  s-gallery">
-					<li>
-						<small><img alt="Silicon Valley Logo" src="/documents/1084364/1822769/silicon-valley-logo.png" /></small></li>
-					<li>
-						<small><img alt="CISCO Logo" src="/documents/1084364/1822769/cisco-logo-blue-2016.png" /></small></li>
+				<!-- Gallery removed 2020-09 for "UTS 122 Guidelines […]"--><!-- SEE: https://www.utsystem.edu/sites/policy-library/policies/uts-122-guidelines-web-site-solicitations --><!--<style id="o-gallery-styles" type="text/css">
+		/*
+				Gallery (Object)
+		
+				A gallery of apps to launch, images to view, etc.
+		
+				Markup:
+				<ul class="o-gallery">
+					<li>…</li>
+					<li>…</li>
 				</ul>
-			</div>
+				*/
+				/* WARN: Duplicated in:
+					- `stem-programs/code-at-tacc/cybersecurity`
+					- `stem-programs/code-at-tacc/cybersecurity-comptia`
+					- `epic/funders-and-project-partners`
+				*/
+				.o-gallery {
+					--grid-gap: 30px;
+					--min-item-width: 300px;
+		
+					display: grid;
+					grid-gap: var(--grid-gap);
+					grid-template-columns: repeat(auto-fit, minmax(var(--min-item-width), 1fr));
+					justify-items: center;
+					align-items: center;
+				}	</style>
+			<style id="s-gallery-styles" type="text/css">
+		/*
+				Gallery (Scope)
+		
+				Styles often added for instances of `o-gallery`, but independent of `o-gallery` layout.
+				*/
+				/* WARN: Duplicated in:
+					- `stem-programs/code-at-tacc/cybersecurity`
+					- `stem-programs/code-at-tacc/cybersecurity-comptia`
+					- `epic/funders-and-project-partners`
+				*/
+				.s-gallery li {
+					list-style-type: none;
+				}	</style>
+			<style id="cybersecurity-unique-gallery-styles" type="text/css">
+		.o-gallery {
+					--grid-gap: 25px;
+					/* FAQ: This variable is borrowed from `.s-gallery` */
+					--min-item-width: var(--smallest-image-width);
+		
+					margin: 25px auto 0;
+				}
+				.s-gallery {
+					--smallest-image-width: 310px;
+					--smallest-image-height: 106px;
+				}
+				.s-gallery li > img {
+					max-width: var(--smallest-image-width);
+					max-height: var(--smallest-image-height);
+				}	</style>
+					<ul class="o-gallery  s-gallery">
+						<li>
+							<small><img alt="Silicon Valley Logo" src="/documents/1084364/1822769/silicon-valley-logo.png" /></small></li>
+						<li>
+							<small><img alt="CISCO Logo" src="/documents/1084364/1822769/cisco-logo-blue-2016.png" /></small></li>
+					</ul>
+				--></div>
 		</div>
-		<small><!--
-		<div class="row">
-			<div style="margin:50px 0px;padding: 0px;">
-					<h2 style="text-align: center;">
-						Related Links</h2>
+		<!--
+			<div class="row">
+				<div style="margin:50px 0px;padding: 0px;">
+						<h2 style="text-align: center;">
+							Related Links</h2>
+				</div>
+				<div class="col-sm-6">
+					<a aria-label="Learn more about TACC's K-12 programs." href="https://www.tacc.utexas.edu/education/stem-programs/k-12" target="_blank"><img alt="Stem Programs - Educational Programs for Students K-12" class="img-responsive img-banners" src="https://www.tacc.utexas.edu/documents/1084364/1158641/K-12-Programs.jpg" /></a>
+					<p style="padding:0px; text-align: center;">
+							Learn more about TACC's K-12 programs.</p></div>
+				<div class="col-sm-6">
+					<a aria-label="The formal CODE @ TACC website." href="https://www.gen-cyber.com" target="_blank"><img alt="CODE @ TACC" class="img-responsive img-banners" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DS-Banner.jpg" /></a>
+						</div>
 			</div>
-			<div class="col-sm-6">
-				<a aria-label="Learn more about TACC's K-12 programs." href="https://www.tacc.utexas.edu/education/stem-programs/k-12" target="_blank"><img alt="Stem Programs - Educational Programs for Students K-12" class="img-responsive img-banners" src="https://www.tacc.utexas.edu/documents/1084364/1158641/K-12-Programs.jpg" /></a>
-				<p style="padding:0px; text-align: center;">
-						Learn more about TACC's K-12 programs.</p></div>
-			<div class="col-sm-6">
-				<a aria-label="The formal CODE @ TACC website." href="https://www.gen-cyber.com" target="_blank"><img alt="CODE @ TACC" class="img-responsive img-banners" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DS-Banner.jpg" /></a>
-					</div>
-		</div>
-		--></small></div>
+			--></div>
 	
