RT-18423: Remove gallery

--- a/content/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
+++ b/content/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
@@ -453,75 +453,75 @@
 					</div>
 				</div>
 				<hr />
-				<style id="o-gallery-styles" type="text/css">
-	/*
-				Gallery (Object)
-	
-				A gallery of apps to launch, images to view, etc.
-	
-				Markup:
-				<ul class="o-gallery">
-					<li>…</li>
-					<li>…</li>
-				</ul>
-				*/
-				/* WARN: Duplicated in:
-					- `stem-programs/code-at-tacc/cybersecurity`
-					- `stem-programs/code-at-tacc/cybersecurity-comptia`
-					- `epic/funders-and-project-partners`
-				*/
-				.o-gallery {
-					--grid-gap: 30px;
-					--min-item-width: 300px;
-	
-					display: grid;
-					grid-gap: var(--grid-gap);
-					grid-template-columns: repeat(auto-fit, minmax(var(--min-item-width), 1fr));
-					justify-items: center;
-					align-items: center;
-				}			</style>
-				<style id="s-gallery-styles" type="text/css">
-	/*
-				Gallery (Scope)
-	
-				Styles often added for instances of `o-gallery`, but independent of `o-gallery` layout.
-				*/
-				/* WARN: Duplicated in:
-					- `stem-programs/code-at-tacc/cybersecurity`
-					- `stem-programs/code-at-tacc/cybersecurity-comptia`
-					- `epic/funders-and-project-partners`
-				*/
-				.s-gallery li {
-					list-style-type: none;
-				}			</style>
-				<style id="cybersecurity-unique-gallery-styles" type="text/css">
-	.o-gallery {
-					--grid-gap: 25px;
-					/* FAQ: This variable is borrowed from `.s-gallery` */
-					--min-item-width: var(--smallest-image-width);
-	
-					margin: 25px auto 0;
-				}
-				.s-gallery {
-					--smallest-image-width: 310px;
-					--smallest-image-height: 106px;
-				}
-				.s-gallery li > img {
-					max-width: var(--smallest-image-width);
-					max-height: var(--smallest-image-height);
-				}			</style>
 				<div class="row">
 					<div class="col-sm-12">
 						<h2 style="text-align:center; margin:75px 0px 25px 0px; padding:0px;">
 							Funding</h2>
 						<p style="text-align:center">
 							The camp was funded with the generosity from Cisco University Research Program Fund and Silicon Valley Community Foundation.</p>
+						<!-- Gallery removed 2020-09 for "UTS 122 Guidelines […]"--><!-- SEE: https://www.utsystem.edu/sites/policy-library/policies/uts-122-guidelines-web-site-solicitations --><!--<style id="o-gallery-styles" type="text/css">
+						/*
+						Gallery (Object)
+			
+						A gallery of apps to launch, images to view, etc.
+			
+						Markup:
+						<ul class="o-gallery">
+							<li>…</li>
+							<li>…</li>
+						</ul>
+						*/
+						/* WARN: Duplicated in:
+							- `stem-programs/code-at-tacc/cybersecurity`
+							- `stem-programs/code-at-tacc/cybersecurity-comptia`
+							- `epic/funders-and-project-partners`
+						*/
+						.o-gallery {
+							--grid-gap: 30px;
+							--min-item-width: 300px;
+			
+							display: grid;
+							grid-gap: var(--grid-gap);
+							grid-template-columns: repeat(auto-fit, minmax(var(--min-item-width), 1fr));
+							justify-items: center;
+							align-items: center;
+						}			</style>
+						<style id="s-gallery-styles" type="text/css">
+						/*
+						Gallery (Scope)
+			
+						Styles often added for instances of `o-gallery`, but independent of `o-gallery` layout.
+						*/
+						/* WARN: Duplicated in:
+							- `stem-programs/code-at-tacc/cybersecurity`
+							- `stem-programs/code-at-tacc/cybersecurity-comptia`
+							- `epic/funders-and-project-partners`
+						*/
+						.s-gallery li {
+							list-style-type: none;
+						}			</style>
+						<style id="cybersecurity-unique-gallery-styles" type="text/css">
+						.o-gallery {
+							--grid-gap: 25px;
+							/* FAQ: This variable is borrowed from `.s-gallery` */
+							--min-item-width: var(--smallest-image-width);
+			
+							margin: 25px auto 0;
+						}
+						.s-gallery {
+							--smallest-image-width: 310px;
+							--smallest-image-height: 106px;
+						}
+						.s-gallery li > img {
+							max-width: var(--smallest-image-width);
+							max-height: var(--smallest-image-height);
+						}</style>
 						<ul class="o-gallery  s-gallery">
 							<li>
 								<img alt="Silicon Valley Logo" src="/documents/1084364/1822769/silicon-valley-logo.png" /></li>
 							<li>
 								<img alt="CISCO Logo" src="/documents/1084364/1822769/cisco-logo-blue-2016.png" /></li>
-						</ul>
+						</ul>-->
 					</div>
 				</div>
 				<hr />
