--- a/content/reu--content.html
+++ b/content/reu--content.html
@@ -1,7 +1,7 @@
 <h3>
 	Program Overview</h3>
 <h4>
-	June 8 — August 7, 2020</h4>
+	June 7 — August 6, 2021</h4>
 <p>
 	The Cyberinfrastructure (CI) Research for Social Change Research Experience for Undergraduates (REU) at TACC is actively engaging 10 undergraduate students each summer for nine-weeks in solving real-world problems of national relevance, teaching them to not only be critical thinkers, but to be creative and reflective as well.</p>
 <p>
@@ -29,11 +29,11 @@
 <h4 style="margin-top:20px;">
 	STIPEND</h4>
 <p>
-	Participants will receive a $5,400 stipend. Additionally, travel grants to present research at an annual conference will be available to selected participants.</p>
+	Participants will receive a $5,400 stipend. Additionally, travel grants to present research at an annual conference will be available to selected participants. In-person experiences include travel and housing (+meal card) at The University of Texas at Austin.</p>
 <h4 style="margin-top:20px;">
 	APPLICATION &amp; SELECTION</h4>
 <p>
-	The application period for Summer 2021 is November 1, 2020—March 1, 2021.<!--We recommend that you collect all information before starting the application to prevent loss of information if you leave or close the application page.--></p>
+	The application period for Summer 2021 is November 1, 2020–March 1, 2021.<!--We recommend that you collect all information before starting the application to prevent loss of information if you leave or close the application page.--></p>
 <h4 style="margin-top:20px;">
 	ELIGIBILITY</h4>
 <p>
