--- a/content/education/EPIC/Research/publications.html
+++ b/content/education/EPIC/Research/publications.html
@@ -47,16 +47,12 @@
     <table class="weteachcs-table">
         <tbody>
             <tr>
-                <th class="weteachcs-table__title">
-                    Title</th>
                 <th class="weteachcs-table__cite">
                     Citation</th>
                 <th class="weteachcs-table__link">
                     Link</th>
             </tr>
             <tr>
-                <td class="weteachcs-table__title">
-                    Title 1</td>
                 <td class="weteachcs-table__cite">
                     Citation 1 (long text).
                 </td>
@@ -113,19 +109,20 @@
         .weteachcs-table li {
             list-style-position: inside;
         }
+        .weteachcs-table span {
+            white-space: nowrap;
+            display: inline-block;
+        }
         /* Link */ .weteachcs-table__link {
             text-align: center;
         }
-    }</style>
-    <p>
+    }</style>    <p>
         <a name="top"></a></p>
     <h3>
         Publications</h3>
     <table class="weteachcs-table">
         <thead>
             <tr>
-                <th class="weteachcs-table__title">
-                    Title</th>
                 <th class="weteachcs-table__cite">
                     Citation</th>
                 <th class="weteachcs-table__link">
@@ -134,108 +131,70 @@
         </thead>
         <tbody>
             <tr>
-                <td class="weteachcs-table__title">
-                    Methods for Measuring Inequities in CS Education</td>
                 <td class="weteachcs-table__cite">
-                    Warner, Fletcher, &amp; Garbrecht (2019) [pending full citation]</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/llovod6afe7ucuwzlrvf1bgbfdnayfgb" target="_blank">View</a></td>
-            </tr>
-            <tr>
-                <td class="weteachcs-table__title">
-                    Increasing Capacity for CS Education in Rural Areas</td>
-                <td class="weteachcs-table__cite">
-                    Warner, Fletcher, Torbey, &amp; Garbrecht (2018) [pending full citation]</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/p60sw6pympx2cdzakfc35vdlrx208zhi" target="_blank">View</a></td>
-            </tr>
-            <tr>
-                <td class="weteachcs-table__title">
-                    Summary of the CAPE Framework for Assessing Equity in Computer Science Education&#x2F;2020</td>
-                <td class="weteachcs-table__cite">
-                    Fletcher, C.L. and Warner, J. R., (2020). Summary of the CAPE Framework for Assessing Equity in Computer Science Education. Retrieved from https://www.tacc.utexas.edu/epic/research.</td>
+                    Fletcher, C.L. and Warner, J. R., (2020). Summary of the CAPE Framework for Assessing Equity in Computer Science Education. Retrieved from https:&#x2F;&#x2F;www.tacc.utexas.edu&#x2F;epic&#x2F;research.</td>
                 <td class="weteachcs-table__link">
                     <a href="https://utexas.box.com/s/t0d8mugfd8qvaxwk0uoeaqlxf65bdlrb" target="_blank" >View</a></td>
             </tr>
             <tr>
-                <td class="weteachcs-table__title">
-                    Algebra I Before High School as a Gatekeeper to Computer Science Participation &#x2F; 2020</td>
                 <td class="weteachcs-table__cite">
-                    Torbey, R., Martin, N.D., Warner, J.R, Fletcher, C.L. (2020). "Algebra I Before High School as a Gatekeeper to Computer Science Participation". SIGCSE ‘20 Proceedings of the 51st ACM Technical Symposium on Computer Science Education.</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/fe32v1sq8vexx480d8vmqgg1xv2h79dr" target="_blank" >View</a></td>
-            </tr>
-            <tr>
-                <td class="weteachcs-table__title">
-                    Preparing Texas Students for the Cyber Economy</td>
-                <td class="weteachcs-table__cite">
-                    Fletcher, C.L. & Romchand, R. (2018). "Preparing Texas Students for the Cyber Economy". Austin, TX: The University of Texas at Austin. Retrieved from https://www.tacc.utexas.edu/epic/research/presentations-and-publications</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/nmzcuk0t1oczyurq6vp0zfh4hmybey4q" target="_blank" >View</a></td>
-            </tr>
-            <tr>
-                <td class="weteachcs-table__title">
-                    Warner, Fletcher, Torbey, &amp; Garbrecht (2019)</td>
-                <td class="weteachcs-table__cite">
-                    Warner, J. R., Fletcher, C. L., Torbey, R., Garbrecht, L. S. (2019). Increasing capacity for computer science education in rural areas through a large-scale collective impact model. In "Proceedings of the 50th ACM Technical Symposium on Computer Science Education SIGCSE ’19", 1157-1163. ACM. https://doi.org/10.1145/3287324.3287418</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/jgbvgkhp8xxew5tid01ka137hy2r4oog" target="_blank" >View</a></td>
-            </tr>
-            <tr>
-                <td class="weteachcs-table__title">
-                    Warner, Fletcher, Monroe, &amp; Garbrecht (2018)</td>
-                <td class="weteachcs-table__cite">
-                    Warner, J. R., Fletcher, C. L., Monroe, W., & Garbrecht, L. S. (2018). Growing the High School CS Teacher Workforce: Predictors of Success in Achieving CS Certification [Poster]. In "Proceedings of the 49th ACM Technical Symposium on Computer Science Education". ACM https://doi.org/10.1145/3159450.3162278</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/ao56begyr0e7b1vaabyngi4dccy1kok3" target="_blank" >View</a></td>
-            </tr>
-            <tr>
-                <td class="weteachcs-table__title">
-                    Warner, Childs, &amp; Fletcher (2020) AERA</td>
-                <td class="weteachcs-table__cite">
-                    Warner, J. R., Childs, J., Fletcher, C. L. (2020, April 17-21) Texas computer science: access, participation, and intersectionality. In "Progress and Challenges in K-12 Computer Science Education: Evidence from Four States" [Symposium session]. American Education Research Association Annual Meeting.</td>
+                    Warner, J. R., Childs, J., Fletcher, C. L. (2020, April 17-21) Texas computer science: access, participation, and intersectionality. In &quot;Progress and Challenges in K-12 Computer Science Education: Evidence from Four States&quot; [Symposium session]. American Education Research Association Annual Meeting.</td>
                 <td class="weteachcs-table__link">
                     <a href="https://utexas.box.com/s/5p3od69fi8ba5v0rsvc5l22hilf0sgi0" target="_blank" >View</a></td>
             </tr>
             <tr>
-                <td class="weteachcs-table__title">
-                    Warner, Plowman, Osman, Schallert (2015) PME-NA</td>
                 <td class="weteachcs-table__cite">
-                    Warner, J. R., Plowman, D., Osman, D., & Schallert, D. L. (2015, November). "What fidelity means from a socio-psychological perspective: Situating knowledge construction in math teacher professional development" [Poster]. Annual Conference of the North American Chapter of the International Group for the Psychology of Mathematics Education, Lansing, MI.</td>
+                    Osman, D. J., &amp; Warner, J. R. (2020). Measuring teacher motivation: The missing link between professional development and practice. &quot;Teaching and Teacher Education, 92&quot;, 103064.</td>
                 <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/lgeim5ohi2k6d6s56siufy79quj8sw4g" target="_blank" >View</a></td>
+                    <a href="https://www.sciencedirect.com/science/article/abs/pii/S0742051X1830670X" target="_blank" >View</a></td>
             </tr>
             <tr>
-                <td class="weteachcs-table__title">
-                    Warner, Junk, Osman, Schallert, &amp; Gámez (2020) AERA</td>
                 <td class="weteachcs-table__cite">
-                    Warner, J. R., Junk, D. L., Osman, D. J., Schallert, D. L., & Gámez, C. (2016, April). "Creative construction or spotty uptake?: Propagating a professional development from trainer to facilitator to teacher" [Paper presentation]. American Educational Research Association Annual Meeting, Washington, D.C.</td>
+                    Torbey, R., Martin, N.D., Warner, J.R, Fletcher, C.L. (2020). &quot;Algebra I Before High School as a Gatekeeper to Computer Science Participation&quot;. SIGCSE ‘20 Proceedings of the 51st ACM Technical Symposium on Computer Science Education.</td>
                 <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/x42l5yd4ihmloonm5130sy5x3b1qqf6n" target="_blank" >View</a></td>
+                    <a href="https://utexas.box.com/s/fe32v1sq8vexx480d8vmqgg1xv2h79dr" target="_blank" >View</a></td>
             </tr>
             <tr>
-                <td class="weteachcs-table__title">
-                    Warner &amp; Osman (2017) AERA</td>
                 <td class="weteachcs-table__cite">
-                    Warner, J. R. & Osman, D. J. (2017, April). "Teachers’ Expectancies, Values, and Perceived Costs: A Scale to Measure Teachers’ Motivation after Professional Development" [Poster]. American Educational Research Association Annual Meeting, San Antonio, TX.</td>
+                    Warner, J. R., Fletcher, C. L., Torbey, R., Garbrecht, L. S. (2019). Increasing capacity for computer science education in rural areas through a large-scale collective impact model. In &quot;Proceedings of the 50th ACM Technical Symposium on Computer Science Education SIGCSE ’19&quot;, 1157-1163. ACM. https:&#x2F;&#x2F;doi.org&#x2F;10.1145&#x2F;3287324.3287418</td>
                 <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/qj3e9vvjozoc3by12k2op5xuf26j9m27" target="_blank" >View</a></td>
+                    <a href="https://utexas.box.com/s/jgbvgkhp8xxew5tid01ka137hy2r4oog" target="_blank" >View</a></td>
             </tr>
             <tr>
-                <td class="weteachcs-table__title">
-                    Warner, Fletcher, &amp; Garbrecht (2019) AERA</td>
                 <td class="weteachcs-table__cite">
-                    Warner, J. R., Fletcher, C. L., & Garbrecht, L. S. (2019, Apr). "Better data, better progress: Methods for measuring inequities in computer science education" [Poster]. American Educational Research Association Annual Meeting, Toronto, Canada.</td>
+                    Warner, J. R., Fletcher, C. L., &amp; Garbrecht, L. S. (2019, Apr). &quot;Better data, better progress: Methods for measuring inequities in computer science education&quot; [Poster]. American Educational Research Association Annual Meeting, Toronto, Canada.</td>
                 <td class="weteachcs-table__link">
                     <a href="https://utexas.box.com/s/64ntv8lopcd9h9nbco2zesvvgfpfuvm6" target="_blank" >View</a></td>
             </tr>
             <tr>
-                <td class="weteachcs-table__title">
-                    Measuring teacher motivation: The missing link between professional development and practice (2020)</td>
                 <td class="weteachcs-table__cite">
-                    Osman, D. J., & Warner, J. R. (2020). Measuring teacher motivation: The missing link between professional development and practice. "Teaching and Teacher Education, 92", 103064.</td>
+                    Fletcher, C.L. &amp; Romchand, R. (2018). &quot;Preparing Texas Students for the Cyber Economy&quot;. Austin, TX: The University of Texas at Austin. Retrieved from https:&#x2F;&#x2F;www.tacc.utexas.edu&#x2F;epic&#x2F;research&#x2F;presentations-and-publications</td>
                 <td class="weteachcs-table__link">
-                    <a href="https://www.sciencedirect.com/science/article/abs/pii/S0742051X1830670X" target="_blank" >View</a></td>
+                    <a href="https://utexas.box.com/s/nmzcuk0t1oczyurq6vp0zfh4hmybey4q" target="_blank" >View</a></td>
+            </tr>
+            <tr>
+                <td class="weteachcs-table__cite">
+                    Warner, J. R., Fletcher, C. L., Monroe, W., &amp; Garbrecht, L. S. (2018). Growing the High School CS Teacher Workforce: Predictors of Success in Achieving CS Certification [Poster]. In &quot;Proceedings of the 49th ACM Technical Symposium on Computer Science Education&quot;. ACM https:&#x2F;&#x2F;doi.org&#x2F;10.1145&#x2F;3159450.3162278</td>
+                <td class="weteachcs-table__link">
+                    <a href="https://utexas.box.com/s/ao56begyr0e7b1vaabyngi4dccy1kok3" target="_blank" >View</a></td>
+            </tr>
+            <tr>
+                <td class="weteachcs-table__cite">
+                    Warner, J. R. &amp; Osman, D. J. (2017, April). &quot;Teachers’ Expectancies, Values, and Perceived Costs: A Scale to Measure Teachers’ Motivation after Professional Development&quot; [Poster]. American Educational Research Association Annual Meeting, San Antonio, TX.</td>
+                <td class="weteachcs-table__link">
+                    <a href="https://utexas.box.com/s/qj3e9vvjozoc3by12k2op5xuf26j9m27" target="_blank" >View</a></td>
+            </tr>
+            <tr>
+                <td class="weteachcs-table__cite">
+                    Warner, J. R., Junk, D. L., Osman, D. J., Schallert, D. L., &amp; Gámez, C. (2016, April). &quot;Creative construction or spotty uptake?: Propagating a professional development from trainer to facilitator to teacher&quot; [Paper presentation]. American Educational Research Association Annual Meeting, Washington, D.C.</td>
+                <td class="weteachcs-table__link">
+                    <a href="https://utexas.box.com/s/x42l5yd4ihmloonm5130sy5x3b1qqf6n" target="_blank" >View</a></td>
+            </tr>
+            <tr>
+                <td class="weteachcs-table__cite">
+                    Warner, J. R., Plowman, D., Osman, D., &amp; Schallert, D. L. (2015, November). &quot;What fidelity means from a socio-psychological perspective: Situating knowledge construction in math teacher professional development&quot; [Poster]. Annual Conference of the North American Chapter of the International Group for the Psychology of Mathematics Education, Lansing, MI.</td>
+                <td class="weteachcs-table__link">
+                    <a href="https://utexas.box.com/s/lgeim5ohi2k6d6s56siufy79quj8sw4g" target="_blank" >View</a></td>
             </tr>
         </tbody>
     </table>
