RT-18475: Update based on new data

--- a/content/education/EPIC/Research/presentations.html
+++ b/content/education/EPIC/Research/presentations.html
@@ -153,6 +153,19 @@
             </tr>
             <tr>
                 <td class="weteachcs-table__date">
+                    April 2020</td>
+                <td class="weteachcs-table__title">
+                    Progress and Challenges in K-12 Computer Science Education: Evidence from Four States</td>
+                <td class="weteachcs-table__place">
+                    American Education Research Association Annual Meeting (Virtual)</td>
+                <td class="weteachcs-table__cite">
+                    <span>Jayce Warner</span>, <span> Joshua Childs</span>, <span> Carol Fletcher</span>
+                </td>
+                <td class="weteachcs-table__link">
+                    <a href="https://utexas.box.com/s/5p3od69fi8ba5v0rsvc5l22hilf0sgi0" target="_blank" >View</a></td>
+            </tr>
+            <tr>
+                <td class="weteachcs-table__date">
                     March 2020</td>
                 <td class="weteachcs-table__title">
                     CAPE: A Framework for Assessing Equity in CS</td>
@@ -189,6 +202,19 @@
                 </td>
                 <td class="weteachcs-table__link">
                     <a href="https://docs.google.com/presentation/d/1BX3C-CAW68s8A5xJMqWmb6klIPbxZX__4TB2bultk6A/edit?usp=sharing" target="_blank" >View</a></td>
+            </tr>
+            <tr>
+                <td class="weteachcs-table__date">
+                    April 2019</td>
+                <td class="weteachcs-table__title">
+                    Better data, better progress: Methods for measuring inequities in computer science education</td>
+                <td class="weteachcs-table__place">
+                    American Educational Research Association Annual Meeting, Toronto, Canada</td>
+                <td class="weteachcs-table__cite">
+                    <span>Jayce Warner</span>, <span> Carol Fletcher</span>, <span> Lisa Garbrecht</span>
+                </td>
+                <td class="weteachcs-table__link">
+                    <a href="https://utexas.box.com/s/64ntv8lopcd9h9nbco2zesvvgfpfuvm6" target="_blank" >View</a></td>
             </tr>
             <tr>
                 <td class="weteachcs-table__date">
@@ -387,6 +413,19 @@
             </tr>
             <tr>
                 <td class="weteachcs-table__date">
+                    April 2017</td>
+                <td class="weteachcs-table__title">
+                    Teachers’ Expectancies, Values, and Perceived Costs: A Scale to Measure Teachers’ Motivation after Professional Development</td>
+                <td class="weteachcs-table__place">
+                    American Educational Research Association Annual Meeting, San Antonio, TX</td>
+                <td class="weteachcs-table__cite">
+                    <span>Jayce Warner</span>, <span> David Osman</span>
+                </td>
+                <td class="weteachcs-table__link">
+                    <a href="https://utexas.box.com/s/qj3e9vvjozoc3by12k2op5xuf26j9m27" target="_blank" >View</a></td>
+            </tr>
+            <tr>
+                <td class="weteachcs-table__date">
                     October 2016</td>
                 <td class="weteachcs-table__title">
                     Integrating evaluation and program design for sustained, statewide teacher professional development in STEM</td>
@@ -397,6 +436,19 @@
                 </td>
                 <td class="weteachcs-table__link">
                     <a href="https://docs.google.com/presentation/d/16MKP6CJkyfFozgmuPnFtauRarjI18nUnF3yilD4LEO4/edit?usp=sharing" target="_blank" >View</a></td>
+            </tr>
+            <tr>
+                <td class="weteachcs-table__date">
+                    November 2015</td>
+                <td class="weteachcs-table__title">
+                    What fidelity means from a socio-psychological perspective: Situating knowledge construction in math teacher professional development</td>
+                <td class="weteachcs-table__place">
+                    Annual Conference of the North American Chapter of the International Group for the Psychology of Mathematics Education, Lansing, MI.</td>
+                <td class="weteachcs-table__cite">
+                    <span>Jayce Warner</span>, <span> Deborah Plowman</span>, <span> David Osman</span>, <span> Diane Schallert</span>
+                </td>
+                <td class="weteachcs-table__link">
+                    <a href="https://utexas.box.com/s/lgeim5ohi2k6d6s56siufy79quj8sw4g" target="_blank" >View</a></td>
             </tr>
         </tbody>
     </table>
