--- a/content/education/EPIC/Research/publications.html
+++ b/content/education/EPIC/Research/publications.html
@@ -132,15 +132,15 @@
         <tbody>
             <tr>
                 <td class="weteachcs-table__cite">
-                    Fletcher, C.L. and Warner, J. R., (2020). Summary of the CAPE Framework for Assessing Equity in Computer Science Education. Retrieved from https:&#x2F;&#x2F;www.tacc.utexas.edu&#x2F;epic&#x2F;research.</td>
+                    Sexton, S., Ryoo, J., Garbrecht, L., &amp; Fall, R. (2020, September 16). Dimensions of equity in RPPs - A framework to guide partnership discussions. &quot;National Network of Education Research-Practice Partnerships (NNERPP) Extra,&quot; 2(3), 12-18.</td>
                 <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/t0d8mugfd8qvaxwk0uoeaqlxf65bdlrb" target="_blank" >View</a></td>
+                    <a href="https://utexas.box.com/shared/static/lxly7ejf1u2amg4bjzqnyl7j7knjue7a.pdf" target="_blank" >View</a></td>
             </tr>
             <tr>
                 <td class="weteachcs-table__cite">
-                    Warner, J. R., Childs, J., Fletcher, C. L. (2020, April 17-21) Texas computer science: access, participation, and intersectionality. In &quot;Progress and Challenges in K-12 Computer Science Education: Evidence from Four States&quot; [Symposium session]. American Education Research Association Annual Meeting.</td>
+                    Fletcher, C.L. and Warner, J. R., (2020). Summary of the CAPE Framework for Assessing Equity in Computer Science Education. Retrieved from https:&#x2F;&#x2F;www.tacc.utexas.edu&#x2F;epic&#x2F;research.</td>
                 <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/5p3od69fi8ba5v0rsvc5l22hilf0sgi0" target="_blank" >View</a></td>
+                    <a href="https://utexas.box.com/s/t0d8mugfd8qvaxwk0uoeaqlxf65bdlrb" target="_blank" >View</a></td>
             </tr>
             <tr>
                 <td class="weteachcs-table__cite">
@@ -162,12 +162,6 @@
             </tr>
             <tr>
                 <td class="weteachcs-table__cite">
-                    Warner, J. R., Fletcher, C. L., &amp; Garbrecht, L. S. (2019, Apr). &quot;Better data, better progress: Methods for measuring inequities in computer science education&quot; [Poster]. American Educational Research Association Annual Meeting, Toronto, Canada.</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/64ntv8lopcd9h9nbco2zesvvgfpfuvm6" target="_blank" >View</a></td>
-            </tr>
-            <tr>
-                <td class="weteachcs-table__cite">
                     Fletcher, C.L. &amp; Romchand, R. (2018). &quot;Preparing Texas Students for the Cyber Economy&quot;. Austin, TX: The University of Texas at Austin. Retrieved from https:&#x2F;&#x2F;www.tacc.utexas.edu&#x2F;epic&#x2F;research&#x2F;presentations-and-publications</td>
                 <td class="weteachcs-table__link">
                     <a href="https://utexas.box.com/s/nmzcuk0t1oczyurq6vp0zfh4hmybey4q" target="_blank" >View</a></td>
@@ -180,21 +174,9 @@
             </tr>
             <tr>
                 <td class="weteachcs-table__cite">
-                    Warner, J. R. &amp; Osman, D. J. (2017, April). &quot;Teachers’ Expectancies, Values, and Perceived Costs: A Scale to Measure Teachers’ Motivation after Professional Development&quot; [Poster]. American Educational Research Association Annual Meeting, San Antonio, TX.</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/qj3e9vvjozoc3by12k2op5xuf26j9m27" target="_blank" >View</a></td>
-            </tr>
-            <tr>
-                <td class="weteachcs-table__cite">
                     Warner, J. R., Junk, D. L., Osman, D. J., Schallert, D. L., &amp; Gámez, C. (2016, April). &quot;Creative construction or spotty uptake?: Propagating a professional development from trainer to facilitator to teacher&quot; [Paper presentation]. American Educational Research Association Annual Meeting, Washington, D.C.</td>
                 <td class="weteachcs-table__link">
                     <a href="https://utexas.box.com/s/x42l5yd4ihmloonm5130sy5x3b1qqf6n" target="_blank" >View</a></td>
-            </tr>
-            <tr>
-                <td class="weteachcs-table__cite">
-                    Warner, J. R., Plowman, D., Osman, D., &amp; Schallert, D. L. (2015, November). &quot;What fidelity means from a socio-psychological perspective: Situating knowledge construction in math teacher professional development&quot; [Poster]. Annual Conference of the North American Chapter of the International Group for the Psychology of Mathematics Education, Lansing, MI.</td>
-                <td class="weteachcs-table__link">
-                    <a href="https://utexas.box.com/s/lgeim5ohi2k6d6s56siufy79quj8sw4g" target="_blank" >View</a></td>
             </tr>
         </tbody>
     </table>
