RT-18472: Add staff, Allen Antoine

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -61,6 +61,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/allen-antoine">Antoine, Allen J., Jr.</a></td>
+			<td>
+				<a href="mailto:ajantoine@rice.edu">ajantoine@rice.edu</a></td>
+			<td>
+				Expanding Pathways in Computing (EPIC)</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/carrie-arnold">Arnold, Carrie</a></td>
 			<td>
 				<a href="mailto:cmarnold@tacc.utexas.edu">cmarnold@tacc.utexas.edu</a></td>
