--- a/content/education/EPIC/WeTeach_CS/cs-regional-data--2018-2019.html
+++ b/content/education/EPIC/WeTeach_CS/cs-regional-data--2018-2019.html
@@ -16,51 +16,51 @@
 	<div class="col-sm-4">
 		<ul>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+STATE.pdf" target="_blank">State</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+STATE.pdf/d7a7602f-4a92-486f-9599-af34d6dd3710" target="_blank">State</a></li>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+1.pdf" target="_blank">Region 1</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+1.pdf/c6db4414-a74e-43f9-a3f3-318c3e44029a" target="_blank">Region 1</a></li>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+2.pdf" target="_blank">Region 2</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+2.pdf/7672c57b-b227-44f1-b8f1-ea41df7db866" target="_blank">Region 2</a></li>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+3.pdf" target="_blank">Region 3</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+3.pdf/99c182b8-6422-4593-924b-7a746ab15110" target="_blank">Region 3</a></li>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+4.pdf" target="_blank">Region 4</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+4.pdf/c32efac5-81f0-42fb-9f51-64e06c6e5aba" target="_blank">Region 4</a></li>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+5.pdf" target="_blank">Region 5</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+5.pdf/982dfc8c-36a9-4e5a-b998-4bf0401a8575" target="_blank">Region 5</a></li>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+6.pdf" target="_blank">Region 6</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+6.pdf/e5fc5cd8-1f27-4fd5-afb9-faeb059e0900" target="_blank">Region 6</a></li>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+7.pdf" target="_blank">Region 7</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+7.pdf/40a4ecdb-45ed-400c-8919-232ac508a673" target="_blank">Region 7</a></li>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+8.pdf" target="_blank">Region 8</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+8.pdf/fe4a41b3-c816-47e4-b848-ea1efa74361e" target="_blank">Region 8</a></li>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+9.pdf" target="_blank">Region 9</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+9.pdf/2d27c5a7-e37b-4cb6-b78c-42739069080d" target="_blank">Region 9</a></li>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+10.pdf" target="_blank">Region 10</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+10.pdf/3e26b7a0-436c-43a3-8c64-ef5e677a54d9" target="_blank">Region 10</a></li>
 		</ul>
 	</div>
 	<div class="col-sm-4">
 		<ul>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+11.pdf" target="_blank">Region 11</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+11.pdf/a0ef8c10-1d00-4862-b601-d6ea553b6f12" target="_blank">Region 11</a></li>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+12.pdf" target="_blank">Region 12</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+12.pdf/1d48e0fb-9199-4376-9144-2cec09c4766d" target="_blank">Region 12</a></li>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+13.pdf" target="_blank">Region 13</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+13.pdf/c18f69cb-5dec-4c4e-ba7a-d17d9911cb0d" target="_blank">Region 13</a></li>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+14.pdf" target="_blank">Region 14</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+14.pdf/1c54e0ed-9a2e-49e7-9f0d-1af82e152dbe" target="_blank">Region 14</a></li>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+15.pdf" target="_blank">Region 15</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+15.pdf/77f87b2f-13de-49f7-8b8d-2ea45bead308" target="_blank">Region 15</a></li>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+16.pdf" target="_blank">Region 16</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+16.pdf/3215cc5f-747b-4231-b35f-308acd34777e" target="_blank">Region 16</a></li>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+17.pdf" target="_blank">Region 17</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+17.pdf/d8507778-6126-4ab6-bbb1-e99d8bc9e0c0" target="_blank">Region 17</a></li>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+18.pdf" target="_blank">Region 18</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+18.pdf/7a5856d7-d310-4a62-821a-2c3b1dc9772c" target="_blank">Region 18</a></li>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+19.pdf" target="_blank">Region 19</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+19.pdf/2dd4cfcb-2393-4f67-ad24-5810a62fa677" target="_blank">Region 19</a></li>
 			<li>
-				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+20.pdf" target="_blank">Region 20</a></li>
+				<a href="/documents/1084364/1898187/CS+Profile+2018-19+-+Region+20.pdf/ba9a1c82-1eac-4c8b-8ab6-e5de638d5431" target="_blank">Region 20</a></li>
 			<li>
 				<a href="/epic/research/cs-regional-data/2017-2018">2017–2018</a></li>
 		</ul>
