Quick: Fix typo

--- a/content/education/EPIC/funders-and-project-partners.html
+++ b/content/education/EPIC/funders-and-project-partners.html
@@ -144,7 +144,7 @@ Style guide: components.weteachcs
         Thank You</h3>
     <ul>
         <li>National Science Foundation</li>
-        <li>Seigel Family Endowment</li>
+        <li>Siegel Family Endowment</li>
         <li>Google</li>
         <li>Microsoft</li>
         <li>KLE Foundation</li>
